ubiquity (2.21.34) UNRELEASED; urgency=medium

  * Automatic update of included source packages: console-setup
    1.108ubuntu8, localechooser 2.65ubuntu2.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 19 Oct 2015 15:11:49 +0100

ubiquity (2.21.33) wily; urgency=medium

  * Automatic update of included source packages: tzsetup 1:0.66ubuntu2.
    (LP: #1462688)

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Thu, 01 Oct 2015 15:50:33 -0400

ubiquity (2.21.32) wily; urgency=medium

  * Resolve a spacing issue in the KDE ui.
    - Move vertial spacer for branding logo from designer file to code
    - Adjust spacing policies of the lefthand pane to do what we need:
      + the header layout doesn't expand anymore
      + the steps layout expands horizontally and verticall and additionally
        enforces its sizeHint as minimum.
      + the unused footer layout no longer expands horizontally but sticks to
        its minimum
    - Push branding logo to smaller size
      + The logo is now packed into a layout where it is spaced from left and
        right to cause an undefined shrinking as per Qt's choice. This
        effectively reduces the sizes of the logo both in width and height (as
        height is bound to width). This in turn brings the overall size down
        enough to not cause size expansion beyond "resonable" measures.
        (Reasonable being just big enough to be good looking but small enough
         to not push down on the labels in the steps widget. Latter has an
         unknown cause, but when the logo is too big it starts pushing on the
         labels, disregarding the entire sizepolicy of all involved widgets.
         If the logo is small enough this doesn't happen which either may be
         because there is a hardcoded height somewhere or the joint minimal
         size of all steps' pages is heigh enough to allow for this to happen.
         This overall layout problem has been there for years and only became